Bug 253603 - Folded i64 comparisons should return i32 in WasmBBQJIT
Summary: Folded i64 comparisons should return i32 in WasmBBQJIT
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebAssembly (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: David Degazio
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-08 14:12 PST by David Degazio
Modified: 2023-03-09 08:42 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Degazio 2023-03-08 14:12:15 PST
rdar://106419423

i64 comparisons (both equality and relational ops) that get constant folded in BBQ JIT will result in i64-typed constants instead of i32 ones. This can cause us to fail validation or assertions in debug builds.
Comment 1 David Degazio 2023-03-08 14:32:22 PST
Pull request: https://github.com/WebKit/WebKit/pull/11257
Comment 2 EWS 2023-03-09 08:42:35 PST
Committed 261438@main (fb8b78d340d5): <https://commits.webkit.org/261438@main>

Reviewed commits have been landed. Closing PR #11257 and removing active labels.