Folded i64 comparisons should return i32 in WasmBBQJIT https://bugs.webkit.org/show_bug.cgi?id=253603 rdar://106419423

Reviewed by Yusuke Suzuki.

Makes i64 comparisons in WasmBBQJIT return i32 constants when folded,
instead of i64. Also adds tests exhaustively testing constant folding
for each type and comparison op.

* JSTests/wasm/stress/comparison-folding-f32.js: Added.
(async test):
* JSTests/wasm/stress/comparison-folding-f64.js: Added.
(async test):
* JSTests/wasm/stress/comparison-folding-i32.js: Added.
(async test):
* JSTests/wasm/stress/comparison-folding-i64.js: Added.
(async test):
* JSTests/wasm/stress/switch-on-boolean.js: Added.
(async test):
* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::emitCompareI64):

Canonical link: https://commits.webkit.org/261438@main